--- a/FalconClientProto/.classpath
+++ b/FalconClientProto/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="com.amazonaws.eclipse.sdk.AWS_JAVA_SDK"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="/Users/lolapriego/IIT/CloudKMap/FalconClientProto/spring-security-crypto-3.1.0.RC3.jar"/>
+	<classpathentry exported="true" kind="lib" path="src/TaskMessage.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
