--- a/FalconWorker/src/AwsCredentials.properties
+++ b/FalconWorker/src/AwsCredentials.properties
@@ -1,4 +1,4 @@
 #Insert your AWS Credentials from http://aws.amazon.com/security-credentials
 #Mon Sep 30 19:53:44 CDT 2013
 secretKey: rIb2jrNxcxPnmHF/5jmYJDBxHiOoMKY8NJyNLqiI
-AccessKey: AKIAITOWCCIPV6ONJJSA
+accessKey: AKIAITOWCCIPV6ONJJSA
