--- a/FalconWorker/.classpath
+++ b/FalconWorker/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="/home/stroll/.m2/repository/org/springframework/security/spring-security-core/3.1.4.RELEASE/spring-security-core-3.1.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/Java/CS554/CloudKMap/spring-security-core-3.1.4.RELEASE.jar"/>
 	<classpathentry kind="con" path="com.amazonaws.eclipse.sdk.AWS_JAVA_SDK"/>
-	<classpathentry kind="lib" path="/home/stroll/Java/protobuf-java-2.5.0.jar"/>
-	<classpathentry kind="lib" path="/home/stroll/Java/CloudKMap/TaskMessage.jar"/>
+	<classpathentry kind="lib" path="D:/Java/CS554/CloudKMap/protobuf-java-2.5.0.jar"/>
+	<classpathentry kind="lib" path="D:/Java/CS554/CloudKMap/TaskMessage.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
