--- a/FalconClientProto/.classpath
+++ b/FalconClientProto/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="com.amazonaws.eclipse.sdk.AWS_JAVA_SDK"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="D:/Java/CS554/CloudKMap/protobuf-java-2.5.0.jar"/>
 	<classpathentry kind="lib" path="D:/Java/CS554/CloudKMap/spring-security-core-3.1.4.RELEASE.jar"/>
 	<classpathentry kind="lib" path="D:/Java/CS554/CloudKMap/TaskMessage.jar"/>
