--- a/FalconWorker/.classpath
+++ b/FalconWorker/.classpath
@@ -3,9 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="com.amazonaws.eclipse.sdk.AWS_JAVA_SDK"/>
-	<classpathentry kind="lib" path="/Users/lolapriego/IIT/CloudKMap/MapReduce.jar"/>
-	<classpathentry kind="lib" path="/Users/lolapriego/IIT/CloudKMap/protobuf-java-2.5.0.jar"/>
-	<classpathentry kind="lib" path="/Users/lolapriego/IIT/CloudKMap/spring-security-core-3.1.4.RELEASE.jar"/>
-	<classpathentry kind="lib" path="/Users/lolapriego/IIT/CloudKMap/TaskMessage.jar"/>
+	<classpathentry kind="lib" path="D:/Java/CS554/CloudKMap/protobuf-java-2.5.0.jar"/>
+	<classpathentry kind="lib" path="D:/Java/CS554/CloudKMap/spring-security-core-3.1.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/Java/CS554/CloudKMap/TaskMessage.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
